testsuite/tests/default/DefaultImportFail03.hs
-- | Import a module that imports but doesn't re-export a @default Monoid@

import UnExportMonoidSum ()

main = print mempty
